RESOLVED FIXED80788
Web Inspector: [chromium] ScriptGCEvent should not be static
https://bugs.webkit.org/show_bug.cgi?id=80788
Summary Web Inspector: [chromium] ScriptGCEvent should not be static
Andrey Kosyakov
Reported 2012-03-11 08:59:26 PDT
Currently, all fields/methods of ScriptGCEvent are static and it will only register its callbacks on for first thread it's called on -- subsequent calls will bail out from addEventListener(). If we need to instrument multiple isolates concurrently, one instance of ScriptGCEvent should be maintained per isolate.
Attachments
Patch (5.39 KB, patch)
2012-05-04 06:07 PDT, Ilya Tikhonovsky
no flags
Patch (6.75 KB, patch)
2012-05-04 07:20 PDT, Ilya Tikhonovsky
yurys: review+
Ilya Tikhonovsky
Comment 1 2012-05-04 06:07:18 PDT
Yury Semikhatsky
Comment 2 2012-05-04 06:49:27 PDT
Comment on attachment 140202 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=140202&action=review > Source/WebCore/bindings/v8/ScriptGCEvent.cpp:113 > for (GCEventListeners::iterator i = listeners.begin(); i != listeners.end(); ++i) Please get rid of this static list of listeners as all of the listeners will be called for all GC events no matter in which isolate they happen.
Ilya Tikhonovsky
Comment 3 2012-05-04 07:20:19 PDT
Ilya Tikhonovsky
Comment 4 2012-05-04 08:13:33 PDT
Note You need to log in before you can comment on or make changes to this bug.