Web Inspector: [chromium] ScriptGCEvent should not be static. https://bugs.webkit.org/show_bug.cgi?id=80788

The static members of ScriptGCEvent were moved into per isolate data structure.
Drive by fix: Sometimes the used heap size after a GC is slightly more than it was before.

Reviewed by Yury Semikhatsky.

* bindings/v8/ScriptGCEvent.cpp:
(WebCore::ScriptGCEvent::gcPrologueCallback):
(WebCore::ScriptGCEvent::gcEpilogueCallback):
* bindings/v8/V8Binding.h:
(WebCore::GCEventData::GCEventData):
(WebCore::GCEventData::clear):
(GCEventData):
(WebCore):
(WebCore::V8BindingPerIsolateData::gcEventData):
(V8BindingPerIsolateData):

Canonical link: https://commits.webkit.org/103176@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116103 268f45cc-cd09-0410-ab3c-d52691b4dbfc